# services-aws

./: README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/services/aws/: resources.py
src/nagare/services/aws/: resources.py
