[metadata]
name = nagare-services-aws
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Amazon services
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-aws
    Tracker = https://github.com/nagareproject/services-aws/issues

[options]
zip_safe = False
packages = find:
install_requires =
    boto3
    nagare-server

[options.extras_require]
dev =
    localstack
    awscli

[options.entry_points]
nagare.services =
    aws = nagare.services.aws.resources:AWS

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
